Homework_8/nohup.out
  File "/home/tuo54571/Machine_Learning/Homework_8/hw8.py", line 44
    match modeltype:
          ^
SyntaxError: invalid syntax
